# captain-search

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.yaml.example  pyproject.toml
src/captain_search/: __init__.py  auth.py  config.py  server.py
src/captain_search/providers/: __init__.py  base.py  brave.py  deepwiki.py  exa.py  exa_mcp.py  grep_app.py  jina.py  noodl.py  perplexity.py  serper.py  tavily.py
src/captain_search/tools/: __init__.py  code_search.py  fetch.py  search.py
tests/: test_basic.py  test_providers.py
